--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "url": "git+https://github.com/polasijagan/Dynamic_float_number_calculator.git"
   },
   "keywords": [
-    "float",
-    "number",
-    "calculator"
+    "floatingNumber",
+    "floatingNumbercalculator"
   ],
   "author": "jaganmohan.polasi",
   "license": "ISC",
