add update the verison  and fixed the instaling issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamic_floating_number_calculator",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "The user sends the floating numbers, package handle the dynamically to calculates and returns the appropriate result.like addition, subtraction, multiplication, division, gratethen and lessthan",
   "main": "index.js",
   "type": "module",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/polasijagan/Dynamic_float_number_calculator/issues"
   },
-  "homepage": "https://github.com/polasijagan/Dynamic_float_number_calculator#readme"
+  "homepage": "https://github.com/polasijagan/Dynamic_float_number_calculator#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
