--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dynamic_floating_number_calculator",
-  "version": "1.0.2",
+  "name": "@types/dynamic_floating_number_calculator",
+  "version": "1.0.0",
   "description": "The user sends the floating numbers, package handle the dynamically to calculates and returns the appropriate result.like addition, subtraction, multiplication, division, gratethen and lessthan",
-  "main": "index.js",
+  "main": "dist/index",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/polasijagan/Dynamic_float_number_calculator#readme",
   "dependencies": {
+    "dynamic_floating_number_calculator": "^1.0.2",
     "express": "^4.18.2"
   }
 }
