--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@types/dynamic_floating_number_calculator",
+  "name": "dynamic_floating_number_calculator_data",
   "version": "1.0.0",
   "description": "The user sends the floating numbers, package handle the dynamically to calculates and returns the appropriate result.like addition, subtraction, multiplication, division, gratethen and lessthan",
   "main": "dist/index",
