--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dynamic_floating_number_calculator_data",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The user sends the floating numbers, package handle the dynamically to calculates and returns the appropriate result.like addition, subtraction, multiplication, division, gratethen and lessthan",
-  "main": "dist/index",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
