change the MIT license

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "floatingNumbercalculator"
   ],
   "author": "jaganmohan.polasi",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/polasijagan/Dynamic_float_number_calculator/issues"
   },
